--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mongoose": "^6.7.0"
   },
   "scripts": {
-    "start": "nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
