--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-dashboard-fundacion-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -13,7 +13,8 @@
     "qrcode": "^1.5.1"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
